<resources>
    <string name="app_name">Ceviche</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="profile_subtitle_logged_out">Please Log In or Sign Up\nTo Edit Your Profile!</string>
    <string name="profile_title">"Welcome, "</string>
    <string name="et_profile_name">Name</string>
    <string name="et_profile_email">Email</string>
    <string name="btn_profile_login_signup">Log In / Sign Up</string>
    <string name="title_activity_swipe">SwipeActivity</string>
    <string name="profile_subtitle_logged_in">Edit your information below!</string>
    <string name="btn_profile_logout">Log out</string>
    <string name="profile_guest_name">Guest</string>
    <string name="btn_profile_submit">Submit Changes</string>
    <string name="submit_profile_edits">Your changes have been saved.</string>
    <string name="search_preferences_button">Search Preferences</string>
    <string name="save_button_default">Save</string>
    <string name="save_button_success">Saved</string>
    <string name="save_button_fail">Oops</string>
    <string name="save_button_complete">Saving Changes...</string>
    <string name="et_keyword">Keyword(s)</string>
    <string name="PREF_PROFILE_EDIT_TEXT_CONTENT">Profile_Edit_Text_Content</string>
    <string name="KEY_PROFILE_ET_NAME">Key_Profile_etName</string>
    <string name="KEY_PROFILE_ET_EMAIL">Key_Profile_etEmail</string>
    <string name="title_activity_favorites">My Favorites</string>
    <string name="parse_favorite_photos">favorite_photos</string>
    <string name="favorites_photo_saved">Picture saved in Favorites.</string>
    <string name="favorites_photo_not_saved">You must be logged in to save photos.</string>
    <string name="favorites_open_fail">You must be logged in to view Favorites.</string>
    <string name="favorites_populate_fail">You have no Favorites yet!</string>
    <string name="default_search_query">FOOD</string>
    <string name="PREF_MAIN_SEARCH_SETTINGS">searchSettings</string>
</resources>
