<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    tools:context="hu.ait.android.cevicheteam.ceviche.SearchSettingsFragment">

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_keyword"
            android:id="@+id/search_preferences"/>
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <com.dd.CircularProgressButton
            android:id="@+id/btnSave"
            android:layout_weight="1"
            android:layout_width="196dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/save_button_default"
            app:cpb_textComplete="@string/save_button_success"
            app:cpb_textError="@string/save_button_fail"
            app:cpb_textIdle="@string/save_button_default" />

    </LinearLayout>

</LinearLayout>
